--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,4 @@
+
 .hidden {
   display: none !important;
 }
@@ -30,5 +31,21 @@
 
   .column-half {
     width: 50%;
+  }
+
+  img {
+    flex-basis: 50%;
+  }
+
+  button {
+    margin: 1rem 0.75rem;
+  }
+
+  header h2 {
+    margin-left: 1.75rem;
+  }
+
+  .column-half h4 {
+    margin-top: 0;
   }
 }
