--- a/css/layout.css
+++ b/css/layout.css
@@ -50,8 +50,16 @@
     margin-left: 1.75rem;
   }
 
+  #title {
+    margin-bottom: 1.8rem;
+  }
+
   .column-half h4,
   .column-half h2 {
     margin-top: 0;
+  }
+
+  .margin-0 {
+    margin: 0;
   }
 }
