--- a/css/layout.css
+++ b/css/layout.css
@@ -62,4 +62,14 @@
   .margin-0 {
     margin: 0;
   }
+
+  #entries-page {
+    position: relative;
+  }
+
+  .pos-abs {
+    position: absolute;
+    right: -3rem;
+    top: 0;
+  }
 }
