--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,15 @@ button {
 
 ul {
   padding: 0;
+  list-style-type: none;
 }
 
 i {
   font-size: 1.25rem;
+  position: absolute;
+  right: 0;
+  top: 1.6rem;
+  cursor: pointer;
 }
 
 #new-btn {
@@ -115,12 +120,6 @@ i {
 
 .purple {
   color: rgb(86, 43, 129);
-}
-
-.pos-abs {
-  position: absolute;
-  right: 0;
-  top: 1.6rem;
 }
 
 .pos-rel {
