added Delete Entry text and modal for deleting entries

--- a/css/layout.css
+++ b/css/layout.css
@@ -19,6 +19,43 @@
   width: 100%;
 }
 
+.mt-1.5 {
+  margin-top: 1.5rem;
+  background-color: red;
+}
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.ml {
+  margin-left: 2rem;
+}
+
+.flex {
+  display: flex;
+}
+
+.jc-center {
+  justify-content: center;
+}
+
+.jc-between {
+  justify-content: space-between;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.block {
+  display: inline-block;
+}
+
+.pos-rel {
+  position: relative;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 900px;
