--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,11 @@ i {
   display: inline-block;
 }
 
+.delete {
+  text-decoration: underline;
+  color: red;
+}
+
 .fw-400 {
   font-weight: 400;
 }
@@ -98,30 +103,40 @@ i {
   height: 4rem;
 }
 
-.mb-0 {
-  margin-bottom: 0;
-}
-
-.ml {
-  margin-left: 2rem;
-}
-
-.flex {
-  display: flex;
-}
-
-.jc-center {
-  justify-content: center;
-}
-
-.block {
-  display: inline-block;
-}
-
 .purple {
   color: rgb(86, 43, 129);
 }
 
-.pos-rel {
-  position: relative;
+/* .modal {
+  height: 8rem;
+  width: 24rem;
+
+  background-color: white;
+} */
+
+.modal {
+  height: 12rem;
+  width: 26rem;
+  background-color: white;
+  margin: 8rem auto;
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  z-index: 1;
+}
+
+.cancel-btn {
+  background-color: rgb(182, 182, 182);
+  color: black;
+}
+
+.confirm-btn {
+  background-color: rgb(220, 38, 38);
 }
